Adding js and css to the login panel.

--- a/Membership_app/Membership_app.csproj
+++ b/Membership_app/Membership_app.csproj
@@ -384,6 +384,7 @@
     <Content Include="Views\ProductContent\Content.cshtml" />
     <Content Include="Views\Shared\_RegisterCodePartial.cshtml" />
     <Content Include="Views\Shared\_RegisterUserPartial.cshtml" />
+    <Content Include="Views\Shared\_LoginPanelPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
