--- a/Membership_app/Web.config
+++ b/Membership_app/Web.config
@@ -19,6 +19,12 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    
+    <!-- setup for email recovery -->
+    <add key="from" value="myemailaddress@gmail.com" />
+    <add key="host" value="smtp.gmail.com" />
+    <add key="port" value="25" />
+    <add key="password" value="--Your email password--" />
   </appSettings>
   <system.web>
     <authentication mode="None"/>
